wporg-plugins-2024: Fix "See all" alignment on homepage for mobile.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13469 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins-2024/client/components/_plugin-section.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins-2024/client/components/_plugin-section.scss
@@ -20,11 +20,5 @@
 		align-self: center;
 		flex: 0 0 auto;
 		text-decoration: underline;
-
-		margin-right: var( --wp--style--block-gap );
-
-		@media screen and ( min-width: $ms-breakpoint ) {
-			margin-right: 0;
-		}
 	}
 }
